application/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - capstone.donfolayan.me
        - prometheus.donfolayan.me
        - grafana.donfolayan.me
      secretName: letsencrypt-prod-tls
  ingressClassName: nginx
  rules:
    - host: capstone.donfolayan.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
